install/manifests/jenkins/k8s-jenkins-service-entry.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: jenkins-github
spec:
  hosts:
  - github.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
